# aura-openclaw-spore

./: .gitignore  LICENSE  README.md  infiltrate.py  llms.txt  manifest.json  pyproject.toml
src/aura_openclaw_spore/: effector.py  metabolism.py  skill.py  vision.py
src/aura_pheromone/: metabolism.py  skill.py  vision.py
src/aura_pheromone/synapses/: moltbook.py
tests/: test_skill.py
