[project]
name = "aura-pheromone"
version = "0.1.0"
description = "Premium OpenClaw Skill for autonomous asset verification and monetization."
dependencies = [
    "aura-core @ git+https://github.com/zaebee/aura.git@f56d6a292adfb6a9409827bed5722eee5fda9a6f#subdirectory=packages/aura-core",
    "aura-worker @ git+https://github.com/zaebee/aura.git@f56d6a292adfb6a9409827bed5722eee5fda9a6f#subdirectory=packages/aura-worker",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
